<resources>
    <string name="app_name">PracDialog</string>
    <string name="dialog_fire_missiles">Fire Missile</string>
    <string name="fire">Fire</string>
    <string name="cancel">Cancel</string>
    <string name="pick_time">Pick Your Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="dialog_button">Dialog With Button</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="btn_signin">SIGN_IN</string>
    <string name="notice_button">Notice Dialog(Error)</string>
    <string name="pick_color">Pick a colour</string>
    <string name="listdialog_button">ListDialog</string>
    <string name="multichoice_button">Multi Choice Dialog</string>
</resources>
